# devops-training

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/: settings.local.json
apps/: .env.example  README.md  docker-compose.yaml
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/db/: init.sql
apps/api/src/app/: config.py  main.py
apps/api/src/app/api/: router.py
apps/api/src/app/api/routes/: health.py  items.py
apps/api/src/app/db/: models.py  session.py
apps/api/src/app/db/repositories/: item.py
apps/api/src/app/models/: health.py  item.py
apps/api/tests/: conftest.py  test_health.py  test_items.py
apps/frontend/: .dockerignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json
docs/: architecture.md  brainstorming-session-results.md  prd.md
docs/architecture/: 1-introduction.md  10-frontend-architecture.md  11-backend-architecture.md  12-unified-project-structure.md  13-development-workflow.md  14-deployment-architecture.md  15-security-and-performance.md  16-testing-strategy.md  17-coding-standards.md  18-error-handling-strategy.md  19-monitoring-and-observability.md  2-high-level-architecture.md  20-checklist-results-report.md  3-tech-stack.md  4-data-models.md  5-api-specification.md  6-components.md  7-external-apis.md  8-core-workflows.md  9-database-schema.md  appendix-a-quick-reference.md  index.md  (+1 more)
scripts/: create-kind-cluster.sh
(+66 files in other folders)
